<resources>
    <string name="app_name">Checkboxes</string>
    <string name="chocolate_syrup">Chocolate syrup</string>
    <string name="sprinkles">sprinkles</string>
    <string name="crushed_nuts">Crushed_nuts</string>
    <string name="cherries">Cherries</string>
    <string name="oreo_cookie_crumbles">Oreo cookie crumbles</string>
    <string name="show_toast">Show toast</string>
</resources>